--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "antd": "^3.23.3",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.6",
@@ -36,6 +37,7 @@
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
     "mini-css-extract-plugin": "0.5.0",
+    "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -138,5 +140,6 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react-router-dom": "^5.1.0"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
