--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "draft-js": "^0.11.1",
+    "draftjs-to-html": "^0.8.4",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
@@ -29,6 +31,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "html-to-draftjs": "^1.4.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -51,6 +54,7 @@
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-router": "^5.0.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
